# CodeTrain

./: .gitignore
BinarySearch/: 001_Search.cpp  002_Find.cpp  003_findPeakElement.cpp  004_InversePairs.cpp
Bracktrace/: 001_permute.cpp  002_permuteUnique.cpp  003_numOfIslands.cpp  004_PermutationString.cpp  005_nQueue.cpp  006_generateParenthesis.cpp  007_longestIncrePath.cpp
CppFeature/: CMakeLists.txt  MyString.hpp  MyVector.hpp  RingBuffer.hpp  ThreadSafeQueue.hpp  cpp17_features.cpp  kaidiguo_vector.cpp  test_my_string.cpp  test_my_vector.cpp  test_ring_buffer.cpp  test_thread_safe_queue.cpp
DoublePtr/: 001_mergeArray.cpp  002_isPalindromeString.cpp  003_mergeInterval.cpp  008_maxWater.cpp
DynamicProgramming/: 001_Fibonacci.cpp  005_LCS2.cpp  006_uniquePaths.cpp  009_minMoney.cpp  010_LIS.cpp  011_FindGreatestSumOfSubArray.cpp  013_restoreIpAddresses.cpp  017_rob.cpp  019_maxProfit.cpp  020_maxProfit2.cpp  021_maxProfit3.cpp
Greed/: 002_minmumNumberOfHost.cpp
HashTable/: 005_threeSum.cpp
Leet100/: lengthOfLongestSubstring.cpp
LeetCode_Greedy/: 001_lemonadeChange.cpp  002_eraseOverlapIntervals.cpp  003_findMinArrowShots.cpp  004_merge.cpp  005_canJump.cpp  006_jump2.cpp  007_arrayPairSum.cpp  008_maximumUnits.cpp  009_minCostToMoveChips.cpp  010_canConstruct.cpp  011_twoCitySchedCost.cpp  012_restoreMatrix.cpp  013_candy.cpp  014_wiggleMaxLength.cpp  015_monotoneIncreasingDigits.cpp  016_removeKdigits.cpp  017_matrixScore.cpp
LeetComm/: convert.cpp
LinkTable/: 002_reverseBetween.cpp  004_Merge.cpp  005_mergeLists.cpp  007_EntryNodeOfLoop.cpp  008_FindKthToTail.cpp  009_removeNthFromEnd.cpp  010_FindFirstCommonNode.cpp  011_addInList.cpp  012_sortInList.cpp  013_isPail.cpp  016_deleteDuplicates2.cpp
Simulation/: 04_LRU.cpp
StackQueue/: 001_twoStack.cpp  (+5 more)
(+56 files in other folders)
